# DynaPhoPy

./: .coveralls.yml  .gitignore  .travis.yml  README  README.md  checkbands.py  description.html  dynaphopy.py  examples.html  harmonic_phonopy.py  index.html  input.py  input_silicon  main.py  newinput.py  params.json  pyproject.toml  requirements.txt  setup.py  setup_cuda.py  setup_openmp.py  special.html  text_gui.py  text_ui.py  theory.html  troubleshooting.html  usage.html
Classes/: atoms.py  atomstest.py  controller.py  dynamics.py  parameters.py
Examples/: input_GaN  input_Ge  input_MgO  input_diamond  input_silicon  input_silicon2  script_silicon.py  silicon.py
Extensions/: correlation.c  derivative.c  displacements.c  gpu_correlate.cu  gpu_fft.cu  mem.c  setup.py
Functions/: correlate.py  dynamical_matrix.py  eigenvectors.py  energy.py  entropy.py  interactive_ui.py  iofunctions.py  mem.py  phonopy_interface.py  projection.py  reading.py
GUI/: main_ui.py
Test/: checkbands.py  harmonic_phonopy.py  main.py
c/: correlation.c  displacements.c  mem.c
dynaphopy/: __init__.py  atoms.py  dynamics.py  eigenvectors.py  generate_cell.py  iofile.py  parameters.py  phonopy_link.py  power_spectrum.py  projection.py
example/: input_AlN  input_GaN  input_MgO  script_silicon.py
examples/: input_AlN  input_Ge  input_MgO  input_diamond  input_silicon  script_silicon.py
scripts/: concath5  dynaphopy  dynaphopy.py  fc_lammps  fc_lammps.py  fitdata  qha_extract  qha_extract.py  qha_quasiparticle.py  rfc_calc
stylesheets/: stylesheet.css
unittest/: GaN_test.py  (+6 more)
(+96 files in other folders)
